--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-google-maps/api": "^2.20.7",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "flatpickr": "^4.6.13",
     "react": "^19.1.0",
+    "react-credit-cards-2": "^1.0.3",
     "react-dom": "^19.1.0",
     "react-flatpickr": "^4.0.10",
     "react-icons": "^5.5.0",
