--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "css-minimizer-webpack-plugin": "^7.0.2",
     "flatpickr": "^4.6.13",
     "react": "^18.3.1",
+    "react-credit-cards-2": "^1.0.3",
     "react-dom": "^18.3.1",
     "react-flatpickr": "^4.0.10",
     "react-icons": "^5.5.0",
